managed to make one of our homegrown buttons non-HTMLy, so will apply the same trick to the rest soon

--- a/DrugRegimen/static/home/patienthome.html
+++ b/DrugRegimen/static/home/patienthome.html
@@ -97,9 +97,9 @@
                         <p>30 minutes</p>
                     </div>
                     <div class="prescription-details">
-                        <ul>
-                            <a href="dose/{{ medication.videoURL }}"><button>Submit Video</button></a>
-                        </ul>
+                        <div id="submit">
+                            <a href="dose/{{ medication.videoURL }}"><input type="submit" value="Register"></a>
+                        </div>
                     </div>
                 </div>
                 {% endfor %}
