--- a/DrugRegimen/static/about/patientabout.html
+++ b/DrugRegimen/static/about/patientabout.html
@@ -15,7 +15,8 @@
         <div class="imgbrand"><img style="margin-left: 50px;" width="8%" height="8%" src="{% static 'admin/img/regx.png' %}"></div>
         <nav class="navbar">
             <a href='http://127.0.0.1:8000/home' class="left-nav">Home</a>
-            <a href='http://127.0.0.1:8000/about' class="left-nav">About</a>
+            <div id="current-page-link"><a href='http://127.0.0.1:8000/about' class="left-nav">About</a></div>
+            <a href='http://127.0.0.1:8000/drug-interactions' class="left-nav">Drug Interactions</a>
             <a href='http://127.0.0.1:8000/help' class="left-nav">Help</a>
             <div class="dropdown">
                 <a href='#' class="dropbtn">{{ username }}</a>
