--- a/DrugRegimen/static/comprehensive_conflicts/comprehensive_conflicts.html
+++ b/DrugRegimen/static/comprehensive_conflicts/comprehensive_conflicts.html
@@ -103,7 +103,7 @@ tr:nth-child(even) {
         <nav class="navbar">
             <a href='http://127.0.0.1:8000/home' class="left-nav">Home</a>
             <a href='http://127.0.0.1:8000/about' class="left-nav">About</a>
-            <a href='http://127.0.0.1:8000/drug-interactions' class="left-nav">Drug Interactions</a>
+            <div id="current-page-link"><a href='http://127.0.0.1:8000/drug-interactions' class="left-nav">Drug Interactions</a></div>
             <a href='http://127.0.0.1:8000/help' class="left-nav">Help</a>
             <div class="dropdown">
                 <a href='#' class="dropbtn">{{ username }}</a>
