--- a/DrugRegimen/static/help/patienthelp.html
+++ b/DrugRegimen/static/help/patienthelp.html
@@ -141,7 +141,8 @@
       <nav class="navbar">
         <a href='http://127.0.0.1:8000/home' class="left-nav">Home</a>
         <a href='http://127.0.0.1:8000/about' class="left-nav">About</a>
-        <a href='http://127.0.0.1:8000/help' class="left-nav">Help</a>
+        <a href='http://127.0.0.1:8000/drug-interactions' class="left-nav">Drug Interactions</a>
+        <div id="current-page-link"><a href='http://127.0.0.1:8000/help' class="left-nav">Help</a></div>
         <div class="dropdown">
           <a href='#' class="dropbtn">{{ username }}</a>
           <div class="dropdown-content">
