--- a/DrugRegimen/static/about/doctorabout.html
+++ b/DrugRegimen/static/about/doctorabout.html
@@ -28,21 +28,22 @@
             </div>
         </nav>
     </header>
-    <main><div id="pagecontent">
+    <main>
         <div id="subnav">
             <h3>Doctor About</h2>
         </div>
-        
-        <p>
-            &lt;App Name&gt; is a service which allows doctors to manage perscriptions for their patients.</br>
-            It facilitates pharmacies coupling prescriptions with QR codes which the patient scans to inform their doctor and to check for medical conflicts.</br>
-            </br>
-            Our service offers a range of services for doctors, including the following:</br>
-            > Write a digital prescription for a patient - including the listing of others who can retrieve the prescription on their behalf</br>
-            > Set the prescription so that video uploads from the patient of their conumption of the prescription are necessary</br>
-            > Review the QR scans and videos of patients</br>
-        </p>
-    </div></main>
+        <div id="pagecontent">
+            <p>
+                &lt;App Name&gt; is a service which allows doctors to manage perscriptions for their patients.</br>
+                It facilitates pharmacies coupling prescriptions with QR codes which the patient scans to inform their doctor and to check for medical conflicts.</br>
+                </br>
+                Our service offers a range of services for doctors, including the following:</br>
+                > Write a digital prescription for a patient - including the listing of others who can retrieve the prescription on their behalf</br>
+                > Set the prescription so that video uploads from the patient of their conumption of the prescription are necessary</br>
+                > Review the QR scans and videos of patients</br>
+            </p>
+        </div>
+    </main>
     <footer class="footer">
         <div class="imgbrand"><img src="{% static 'admin/img/synergy.png' %}"></div>
         <div class="text">Copyright &copy; Team 5 2021</div>
