--- a/DrugRegimen/static/about/pharmacistabout.html
+++ b/DrugRegimen/static/about/pharmacistabout.html
@@ -27,19 +27,21 @@
             </div>
         </nav>
     </header>
-    <main><div id="pagecontent">
+    <main>
         <div id="subnav">
             <h3>Pharmacist About</h2>
         </div>
-        <p>
-            &lt;App Name&gt; is a service which allows doctors to manage perscriptions for their patients.</br>
-            It facilitates pharmacies coupling prescriptions with QR codes which the patient scans to inform their doctor and to check for medical conflicts.</br>
-            </br>
-            Our service offers a range of services for pharmacies, including the following:</br>
-            > The ability to verify digital prescriptions at the counter</br>
-            > A handy means to keep track of prescriptions granted</br>
-        </p>
-    </div></main>
+        <div id="pagecontent">
+            <p>
+                &lt;App Name&gt; is a service which allows doctors to manage perscriptions for their patients.</br>
+                It facilitates pharmacies coupling prescriptions with QR codes which the patient scans to inform their doctor and to check for medical conflicts.</br>
+                </br>
+                Our service offers a range of services for pharmacies, including the following:</br>
+                > The ability to verify digital prescriptions at the counter</br>
+                > A handy means to keep track of prescriptions granted</br>
+            </p>
+        </div>
+    </main>
     <footer class="footer">
         <div class="imgbrand"><img src="{% static 'admin/img/synergy.png' %}"></div>
         <div class="text">Copyright &copy; Team 5 2021</div>
