--- a/DrugRegimen/static/home/pharmacisthome.html
+++ b/DrugRegimen/static/home/pharmacisthome.html
@@ -110,8 +110,10 @@
                             <li>{{ item.quantity }} {{ item.dosageForm }} {{ item.drug }} {{ item.doseValue }} {{ item.doseUnit }}</li>
                             {% endfor %}
                         </ul>
-                        <a href="mark-dispensed/{{ prescription.2 }}"><button>Mark Dispensed</button></a>
-                        <a href="generateQRs/{{ prescription.2 }}"><button>Generate QR Codes</button></a>
+                        <div id="submit">
+                            <a href="mark-dispensed/{{ prescription.2 }}"><input type="submit" value="Mark Dispensed"></a>
+                            <a href="generateQRs/{{ prescription.2 }}"><input type="submit" value="Generate QR Codes"></a>
+                        </div>
                     </div>
                 </div>
                 {% endfor %}
