--- a/DrugRegimen/static/comprehensive_conflicts/comprehensive_conflicts.html
+++ b/DrugRegimen/static/comprehensive_conflicts/comprehensive_conflicts.html
@@ -2,161 +2,175 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Conflicts</title>
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'admin/css/pagecontent.css' %}">
-    <link rel="stylesheet" href="{% static 'admin/css/navbaretc.css' %}">
-    <style>
-        * {box-sizing: border-box;}
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <title>Conflicts</title>
+  {% load static %}
+  <link rel="stylesheet" href="{% static 'admin/css/pagecontent.css' %}">
+  <link rel="stylesheet" href="{% static 'admin/css/navbaretc.css' %}">
+  <style>
+    * {
+      box-sizing: border-box;
+    }
 
-.topnav {
-  overflow: hidden;
-  background-color: #e9e9e9;
-}
+    .topnav {
+      overflow: hidden;
+      background-color: #e9e9e9;
+    }
 
-.topnav a {
-  float: left;
-  display: block;
-  color: black;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
+    .topnav a {
+      float: left;
+      display: block;
+      color: black;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+      font-size: 17px;
+    }
 
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
+    .topnav a:hover {
+      background-color: #ddd;
+      color: black;
+    }
 
-.topnav a.active {
-  background-color: #2196F3;
-  color: white;
-}
+    .topnav a.active {
+      background-color: #2196F3;
+      color: white;
+    }
 
-.topnav .search-container {
-  float: right;
-}
+    .topnav .search-container {
+      float: right;
+    }
 
-.topnav input[type=text] {
-  padding: 6px;
-  margin-top: 8px;
-  font-size: 17px;
-  border: none;
-}
+    .topnav input[type=text] {
+      padding: 6px;
+      margin-top: 8px;
+      font-size: 17px;
+      border: none;
+    }
 
-.topnav .search-container button {
-  float: right;
-  padding: 6px 10px;
-  margin-top: 8px;
-  margin-right: 16px;
-  background: #ddd;
-  font-size: 17px;
-  border: none;
-  cursor: pointer;
-}
+    .topnav .search-container button {
+      float: right;
+      padding: 6px 10px;
+      margin-top: 8px;
+      margin-right: 16px;
+      background: #ddd;
+      font-size: 17px;
+      border: none;
+      cursor: pointer;
+    }
 
-.topnav .search-container button:hover {
-  background: #ccc;
-}
+    .topnav .search-container button:hover {
+      background: #ccc;
+    }
 
-@media screen and (max-width: 600px) {
-  .topnav .search-container {
-    float: none;
-  }
-  .topnav a, .topnav input[type=text], .topnav .search-container button {
-    float: none;
-    display: block;
-    text-align: left;
-    width: 100%;
-    margin: 0;
-    padding: 14px;
-  }
-  .topnav input[type=text] {
-    border: 1px solid #ccc;  
-  }
-}
-table {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
-}
+    @media screen and (max-width: 600px) {
+      .topnav .search-container {
+        float: none;
+      }
 
-td, th {
-  border: 1px solid #dddddd;
-  text-align: left;
-  padding: 8px;
-}
+      .topnav a,
+      .topnav input[type=text],
+      .topnav .search-container button {
+        float: none;
+        display: block;
+        text-align: left;
+        width: 100%;
+        margin: 0;
+        padding: 14px;
+      }
 
-tr:nth-child(even) {
-  background-color: #dddddd;
-}
-    </style>
+      .topnav input[type=text] {
+        border: 1px solid #ccc;
+      }
+    }
+
+    table {
+      font-family: arial, sans-serif;
+      border-collapse: collapse;
+      width: 100%;
+    }
+
+    td,
+    th {
+      border: 1px solid #dddddd;
+      text-align: left;
+      padding: 8px;
+    }
+
+    tr:nth-child(even) {
+      background-color: #dddddd;
+    }
+  </style>
 </head>
 
 <body>
+  <div id="page-container">
     <header>
-      <div class="imgbrand"><img style="margin-left: 50px;" width="8%" height="8%" src="{% static 'admin/img/regx.png' %}"></div>
-        <nav class="navbar">
-            <a href='http://127.0.0.1:8000/home' class="left-nav">Home</a>
-            <a href='http://127.0.0.1:8000/about' class="left-nav">About</a>
-            <div id="current-page-link"><a href='http://127.0.0.1:8000/drug-interactions' class="left-nav">Drug Interactions</a></div>
-            <a href='http://127.0.0.1:8000/help' class="left-nav">Help</a>
-            <div class="dropdown">
-                <a href='#' class="dropbtn">{{ username }}</a>
-                <div class="dropdown-content">
-                    <a href="http://127.0.0.1:8000/account">Account</a>
-                    <a href="http://127.0.0.1:8000">Sign Out</a>
-                </div>
-            </div>
-        </nav>
+      <div class="imgbrand"><img style="margin-left: 50px;" width="8%" height="8%"
+          src="{% static 'admin/img/regx.png' %}"></div>
+      <nav class="navbar">
+        <a href='http://127.0.0.1:8000/home' class="left-nav">Home</a>
+        <a href='http://127.0.0.1:8000/about' class="left-nav">About</a>
+        <div id="current-page-link"><a href='http://127.0.0.1:8000/drug-interactions' class="left-nav">Drug
+            Interactions</a></div>
+        <a href='http://127.0.0.1:8000/help' class="left-nav">Help</a>
+        <div class="dropdown">
+          <a href='#' class="dropbtn">{{ username }}</a>
+          <div class="dropdown-content">
+            <a href="http://127.0.0.1:8000/account">Account</a>
+            <a href="http://127.0.0.1:8000">Sign Out</a>
+          </div>
+        </div>
+      </nav>
     </header>
-    <main><div id="pagecontent">
+    <main>
+      <div id="pagecontent">
         <div id="subnav">
           <h3>Search Medication Conflicts</h2>
         </div>
         <div class="topnav">
-            <a>Enter medications:</a>
-            <form action="/check-interactions" method="post">
+          <a>Enter medications:</a>
+          <form action="/check-interactions" method="post">
             {% csrf_token %}
             <div class="search-container">
-                <input type="text" id="search2" name="search2">
-                <button type="submit"><i class="fa fa-search"></i></button>
+              <input type="text" id="search2" name="search2">
+              <button type="submit"><i class="fa fa-search"></i></button>
             </div>
             <div class="search-container">
-                  <input type="text" id="search1" name="search1">
-                  <button type="submit"><i class="fa fa-search"></i></button>
-              </div>
-            </form>
-          </div>
-          
-          <div style="padding-left:16px">
-            <h3>Results {{ drug1 }} {{ drug2 }}</h3>
-          </div>
-          <table>
-            <tr>
-              <th>Drug Interaction</th>
-              <th>Explanation</th>
-              <th>Action</th>
-              <th>Warning</th>
-            </tr>
-            {% for interaction in interactions %}
-            <tr>
-              <td>{{ interaction.0 }}</td>
-              <td>{{ interaction.1 }}</td>
-              <td>Avoid concurrent use.</td>
-              <td>{{ interaction.2 }}</td>
-            </tr>
-            {% endfor %}
-          </table>
-    </div></main>
+              <input type="text" id="search1" name="search1">
+              <button type="submit"><i class="fa fa-search"></i></button>
+            </div>
+          </form>
+        </div>
+
+        <div style="padding-left:16px">
+          <h3>Results {{ drug1 }} {{ drug2 }}</h3>
+        </div>
+        <table>
+          <tr>
+            <th>Drug Interaction</th>
+            <th>Explanation</th>
+            <th>Action</th>
+            <th>Warning</th>
+          </tr>
+          {% for interaction in interactions %}
+          <tr>
+            <td>{{ interaction.0 }}</td>
+            <td>{{ interaction.1 }}</td>
+            <td>Avoid concurrent use.</td>
+            <td>{{ interaction.2 }}</td>
+          </tr>
+          {% endfor %}
+        </table>
+      </div>
+    </main>
     <footer class="footer">
       <div class="imgbrand"><img src="{% static 'admin/img/synergy.png' %}"></div>
       <div class="text">Copyright &copy; Team 5 2021</div>
-</footer>
+    </footer>
+  </div>
 </body>
 
 </html>
