--- a/DrugRegimen/static/home/patienthome.html
+++ b/DrugRegimen/static/home/patienthome.html
@@ -98,7 +98,7 @@
                     </div>
                     <div class="prescription-details">
                         <div id="submit">
-                            <a href="dose/{{ medication.videoURL }}"><input type="submit" value="Register"></a>
+                            <a href="dose/{{ medication.videoURL }}"><input type="submit" value="Upload"></a>
                         </div>
                     </div>
                 </div>
