--- a/DrugRegimen/static/login/register.html
+++ b/DrugRegimen/static/login/register.html
@@ -88,6 +88,9 @@ a {
     <label for="email"><b>Email</b></label>
     <input type="text" placeholder="Enter Email" name="email" id="email" required>
 
+    <label for="gms"><b>GMS Number</b></label>
+    <input type="text" placeholder="Enter GMS Number" name="gms" id="gms" required>
+
     <label for="password"><b>Password</b></label>
     <input type="password" placeholder="Enter Password" name="password" id="password" required>
 
