--- a/DrugRegimen/static/about/pharmacistabout.html
+++ b/DrugRegimen/static/about/pharmacistabout.html
@@ -27,9 +27,10 @@
             </div>
         </nav>
     </header>
-    <main>
+    {% load static %}
+    <main style="background-image: {% static 'admin/img/pharmacyaboutbg.png' %}">
         <div id="subnav">
-            <h3>Pharmacist About</h2>
+            <h3>Pharmacy About</h2>
         </div>
         <div id="pagecontent">
             <p>
