load background image

--- a/DrugRegimen/static/about/pharmacistabout.html
+++ b/DrugRegimen/static/about/pharmacistabout.html
@@ -27,8 +27,7 @@
             </div>
         </nav>
     </header>
-    {% load static %}
-    <main style="background-image: {% static 'admin/img/pharmacyaboutbg.png' %}">
+    <main style="background-image: url({% static 'admin/img/pharmacyaboutbg.png' %})">
         <div id="subnav">
             <h3>Pharmacy About</h2>
         </div>
