more minor changes

--- a/DrugRegimen/static/home/doctorhome.html
+++ b/DrugRegimen/static/home/doctorhome.html
@@ -20,7 +20,7 @@
             position: relative;
             overflow: hidden;
             margin: 15px 15px;
-            background-color: #cc0000;
+            background-color: #e07276;
             border-radius: 20px;
         }
 
@@ -54,7 +54,7 @@
             font-size: larger;
             text-decoration: none;
             color: rgb(0, 0, 0);
-            background-color: #cc0000;
+            background-color: #e07276;
             text-align: center;
             width: auto;
         }
@@ -84,7 +84,7 @@
         }
 
         .patient-summary-red a:hover {
-            background-color: #01493d;
+            background-color: red;
             color: white;
         }
 
@@ -283,7 +283,7 @@
         <main>
             <div id="pagecontent">
                 <div id="subnav">
-                    <h3>Doctor Help</h2>
+                    <h3>Doctor Home</h2>
                 </div>
                 {% for item in patientsAndDrugs %}
                 {% if item.3 %}
