light green div and other aesthetic changes

--- a/DrugRegimen/static/about/patientabout.html
+++ b/DrugRegimen/static/about/patientabout.html
@@ -27,10 +27,11 @@
             </div>
         </nav>
     </header>
-    <main><div id="pagecontent">
+    <main>
         <div id="subnav">
             <h3>Patient About</h2>
         </div>
+        <div id="pagecontent">
         <p>
             &lt;App Name&gt; is a service which allows doctors to manage perscriptions for their patients.</br>
             It facilitates pharmacies coupling prescriptions with QR codes which the patient scans to inform their doctor and to check for medical conflicts.</br>
