--- a/DrugRegimen/static/prescribe-medication/prescribe.html
+++ b/DrugRegimen/static/prescribe-medication/prescribe.html
@@ -178,7 +178,10 @@
       </nav>
     </header>
     <main>
-      <div id="pagecontent">
+      <div id="subnav">
+        <h3>Prescribe Medication</h2>
+    </div>
+    <div id="pagecontent">
         <div class=prescribe>
           <form action="/write-prescription" method="post">
               {% csrf_token %}
