--- a/DrugRegimen/static/about/pharmacistabout.html
+++ b/DrugRegimen/static/about/pharmacistabout.html
@@ -27,11 +27,12 @@
             </div>
         </nav>
     </header>
-    <main style="background-image: url({% static 'admin/img/pharmacyaboutbg.png' %})">
+    <main>
+        <div style="background-image: url({% static 'admin/img/pharmacyaboutbg.png' %}); height: 800px;" >
         <div id="subnav">
             <h3>Pharmacy About</h2>
         </div>
-        <div id="pagecontent">
+        <div>
             <p>
                 &lt;App Name&gt; is a service which allows doctors to manage perscriptions for their patients.</br>
                 It facilitates pharmacies coupling prescriptions with QR codes which the patient scans to inform their doctor and to check for medical conflicts.</br>
