--- a/DrugRegimen/static/account/doctoraccount.html
+++ b/DrugRegimen/static/account/doctoraccount.html
@@ -28,10 +28,11 @@
             </div>
         </nav>
     </header>
-    <main><div id="pagecontent">
+    <main>
         <div id="subnav">
             <h3>Doctor Account</h2>
         </div>
+        <div id="pagecontent">
     </div></main>
     <footer class="footer">
         <div class="imgbrand"><img src="{% static 'admin/img/synergy.png' %}"></div>
