--- a/DrugRegimen/static/home/patienthome.html
+++ b/DrugRegimen/static/home/patienthome.html
@@ -80,7 +80,7 @@
                 </div>
             </nav>
         </header>
-        <main>
+        <main style="background-image: url({% static 'admin/img/bgpatient.png' %}); height: 800px;"><!-- height: 100% works lovely for pages with more content than can fit on screen at one time. for pages with less content than that though, we need to find a better solution then assigning a static height, eg 800px-->
                 <div id="subnav">
                     <h3>Patient Home</h2>
                 </div>
