--- a/DrugRegimen/static/login/login.html
+++ b/DrugRegimen/static/login/login.html
@@ -6,14 +6,8 @@
   <title>Login</title>
   <link rel="stylesheet" type="text/css" href="/static/admin/css/base.css">
   <link rel="stylesheet" type="text/css" href="/static/admin/css/login.css">
-
-
-
-
-
-  <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <link rel="stylesheet" type="text/css" href="/static/admin/css/responsive.css">
-
+  <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
   <meta name="robots" content="NONE,NOARCHIVE">
   <style>
@@ -33,7 +27,7 @@
 <body style="background-color: #D5E6E3;" class=" login" data-admin-utc-offset="0">
 
   <!-- Container -->
-  <div id="container" style="outline: 1px solid #006857;">
+  <div id="container">
 
 
     <!-- Header -->
