--- a/DrugRegimen/static/prescribe-medication/prescribe.html
+++ b/DrugRegimen/static/prescribe-medication/prescribe.html
@@ -48,8 +48,8 @@
 
     .prescribe {
       border-radius: 5px;
-      background-color: #f2f2f2;
       padding: 20px;
+      margin-right: 2%;
     }
 
     .drugbtn {
@@ -177,7 +177,7 @@
         </div>
       </nav>
     </header>
-    <main>
+    <main style="background-image: url({% static 'admin/img/bgdoctor.png' %}); height: 800px;"><!-- height: 100% works lovely for pages with more content than can fit on screen at one time. for pages with less content than that though, we need to find a better solution then assigning a static height, eg 800px-->
       <div id="subnav">
         <h3>Prescribe Medication</h2>
     </div>
