--- a/DrugRegimen/static/about/doctorabout.html
+++ b/DrugRegimen/static/about/doctorabout.html
@@ -28,15 +28,14 @@
             </div>
         </nav>
     </header>
-    <main style="background-image: url({% static 'admin/img/aboutbgdoctor.png' %}); height: 800px;">
-        
+    <main id="main" style="background-image: url({% static 'admin/img/bgdoctor.png' %}); height: 800px;"> <!-- height: 100% works lovely for pages with more content than can fit on screen at one time. for pages with less content than that though, we need to find a better solution then assigning a static height, eg 800px-->
             <div id="subnav">
                 <h3>Doctor About</h2>
             </div>
             <div id="pagecontent">
                 <p>
                     &lt;App Name&gt; is a service which allows doctors to manage perscriptions for their patients.</br>
-                    It facilitates pharmacies coupling prescriptions with QR codes which the patient scans to inform their doctor and to check for medical conflicts.</br>
+                    It facilitates pharmacies by coupling prescriptions with QR codes which the patient scans to inform their doctor and to check for medical conflicts.</br>
                     </br>
                     Our service offers a range of services for doctors, including the following:</br>
                     > Write a digital prescription for a patient - including the listing of others who can retrieve the prescription on their behalf</br>
