--- a/DrugRegimen/static/about/pharmacistabout.html
+++ b/DrugRegimen/static/about/pharmacistabout.html
@@ -27,12 +27,11 @@
             </div>
         </nav>
     </header>
-    <main>
-        <div style="background-image: url({% static 'admin/img/aboutbgpharmacy.png' %}); height: 800px;" >
+    <main style="background-image: url({% static 'admin/img/bgpharmacy.png' %}); height: 800px;"><!-- height: 100% works lovely for pages with more content than can fit on screen at one time. for pages with less content than that though, we need to find a better solution then assigning a static height, eg 800px-->
             <div id="subnav">
                 <h3>Pharmacy About</h2>
             </div>
-            <div>
+            <div id="pagecontent">
                 <p>
                     &lt;App Name&gt; is a service which allows doctors to manage perscriptions for their patients.</br>
                     It facilitates pharmacies coupling prescriptions with QR codes which the patient scans to inform their doctor and to check for medical conflicts.</br>
