--- a/DrugRegimen/static/comprehensive_conflicts/comprehensive_conflicts.html
+++ b/DrugRegimen/static/comprehensive_conflicts/comprehensive_conflicts.html
@@ -125,7 +125,7 @@
         </div>
       </nav>
     </header>
-    <main>
+    <main style="background-image: url({% static 'admin/img/bgpatient.png' %}); height: 800px;"><!-- height: 100% works lovely for pages with more content than can fit on screen at one time. for pages with less content than that though, we need to find a better solution then assigning a static height, eg 800px-->
         <div id="subnav">
           <h3>Search Medication Conflicts</h2>
         </div>
