--- a/DrugRegimen/static/home/pharmacisthome.html
+++ b/DrugRegimen/static/home/pharmacisthome.html
@@ -13,8 +13,9 @@
             position: relative;
             overflow: hidden;
             margin: 15px 15px;
-            background-color: rgb(187, 187, 187);
+            background-color: black;
             border-radius: 20px;
+            border: 1px solid #4e4d4c;
         }
 
         .patient-details a {
@@ -91,14 +92,14 @@
                 </div>
             </nav>
         </header>
-        <main>
+        <main style="background-image: url({% static 'admin/img/bgpharmacy.png' %}); height: 100%;"><!-- height: 100% works lovely for pages with more content than can fit on screen at one time. for pages with less content than that though, we need to find a better solution then assigning a static height, eg 800px-->
             <div id="subnav">
                 <h3>Pharmacy Home</h2>
             </div>
             <div id="pagecontent">
                 <h2>Not dispensed:</h2>
                 {% for prescription in notDispensed %}
-                <div class="patient-summary">
+                <div class="patient-summary" style="background-image: url({% static 'admin/img/qrart.png' %});">
                     <div class="patient-details">
                         <a href='#' class="patient-details" id="patient-name">{{ prescription.0.patientId }}</a>
                     </div>
@@ -124,7 +125,7 @@
                 {% endfor %}
                 <h2>Dispensed (Not Collected):</h2>
                 {% for prescription in dispensedNotReceived %}
-                <div class="patient-summary">
+                <div class="patient-summary" style="background-image: url({% static 'admin/img/qrart.png' %});">
                     <div class="patient-details">
                         <a href='#' class="patient-details" id="patient-name">{{ prescription.0.patientId }}</a>
                     </div>
