--- a/DrugRegimen/static/manage-patients/manage-patients.html
+++ b/DrugRegimen/static/manage-patients/manage-patients.html
@@ -29,7 +29,7 @@
                 </div>
             </nav>
         </header>
-        <main>
+        <main style="background-image: url({% static 'admin/img/bgdoctor.png' %}); height: 800px;"><!-- height: 100% works lovely for pages with more content than can fit on screen at one time. for pages with less content than that though, we need to find a better solution then assigning a static height, eg 800px-->
             
                 <div id="subnav">
                     <h3>Manage Patients</h2>
