more aesthetics but mostly commiting so I have a save point before I try some experimental map stuff

--- a/DrugRegimen/static/help/doctorhelp.html
+++ b/DrugRegimen/static/help/doctorhelp.html
@@ -143,7 +143,7 @@
                 <a href='http://127.0.0.1:8000/about' class="left-nav">About</a>
                 <a href='http://127.0.0.1:8000/manage' class="left-nav">Manage Patients</a>
                 <a href='http://127.0.0.1:8000/prescribe' class="left-nav">Prescribe Medication</a>
-                <a href='http://127.0.0.1:8000/help' class="left-nav">Help</a>
+                <div id="current-page-link"><a href='http://127.0.0.1:8000/help' class="left-nav">Help</a></div>
                 <div class="dropdown">
                     <a href='#' class="dropbtn">{{ username }}</a>
                     <div class="dropdown-content">
