--- a/DrugRegimen/static/login/login.html
+++ b/DrugRegimen/static/login/login.html
@@ -27,7 +27,7 @@
 <body style="background-color: #D5E6E3;" class=" login" data-admin-utc-offset="0">
 
   <!-- Container -->
-  <div id="container">
+  <div id="container" style="border: 1px solid #006857;">
 
 
     <!-- Header -->
