--- a/DrugRegimen/static/about/doctorabout.html
+++ b/DrugRegimen/static/about/doctorabout.html
@@ -15,7 +15,7 @@
         <div class="imgbrand"><img style="margin-left: 50px;" width="8%" height="8%" src="{% static 'admin/img/regx.png' %}"></div>
         <nav class="navbar">
             <a href='http://127.0.0.1:8000/home' class="left-nav">Home</a>
-            <a href='http://127.0.0.1:8000/about' class="left-nav">About</a>
+            <div id="current-page-link"><a href='http://127.0.0.1:8000/about' class="left-nav">About</a></div>
             <a href='http://127.0.0.1:8000/manage' class="left-nav">Manage Patients</a>
             <a href='http://127.0.0.1:8000/prescribe' class="left-nav">Prescribe Medication</a>
             <a href='http://127.0.0.1:8000/help' class="left-nav">Help</a>
