--- a/DrugRegimen/static/comprehensive_conflicts/comprehensive_conflicts.html
+++ b/DrugRegimen/static/comprehensive_conflicts/comprehensive_conflicts.html
@@ -113,8 +113,7 @@
       <nav class="navbar">
         <a href='http://127.0.0.1:8000/home' class="left-nav">Home</a>
         <a href='http://127.0.0.1:8000/about' class="left-nav">About</a>
-        <div id="current-page-link"><a href='http://127.0.0.1:8000/drug-interactions' class="left-nav">Drug
-            Interactions</a></div>
+        <div id="current-page-link"><a href='http://127.0.0.1:8000/drug-interactions' class="left-nav">Drug Interactions</a></div>
         <a href='http://127.0.0.1:8000/help' class="left-nav">Help</a>
         <div class="dropdown">
           <a href='#' class="dropbtn">{{ username }}</a>
