--- a/DrugRegimen/static/help/pharmacisthelp.html
+++ b/DrugRegimen/static/help/pharmacisthelp.html
@@ -139,7 +139,7 @@
   <header>
     <div class="imgbrand"><img style="margin-left: 50px;" width="8%" height="8%" src="{% static 'admin/img/regx.png' %}"></div>
     <nav class="navbar">
-      <a href='http://127.0.0.1:8000/home' class="left-nav">Home</a>
+      <div id="current-page-link"><a href='http://127.0.0.1:8000/home' class="left-nav">Home</a></div>
       <a href='http://127.0.0.1:8000/about' class="left-nav">About</a>
       <a href='http://127.0.0.1:8000/drug-interactions' class="left-nav">Drug Interactions</a>
       <a href='http://127.0.0.1:8000/help' class="left-nav">Help</a>
