--- a/DrugRegimen/static/account/pharmnearyou/pharmnearyou.html
+++ b/DrugRegimen/static/account/pharmnearyou/pharmnearyou.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Custom Popups</title>
+    {% load static %}
+
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <link rel="stylesheet" href="{% static 'admin/css/pharmnearyou.css' %}">
     <script href="{% static 'admin/js/pharmnearyou.js' %}"></script>
