--- a/DrugRegimen/static/home/patienthome.html
+++ b/DrugRegimen/static/home/patienthome.html
@@ -81,7 +81,7 @@
             </nav>
         </header>
         <main style="background-image: url({% static 'admin/img/bgpatient.png' %}); height: 800px;"><!-- height: 100% works lovely for pages with more content than can fit on screen at one time. for pages with less content than that though, we need to find a better solution then assigning a static height, eg 800px-->
-                <div id="subnav">
+                <div id="subnav" style="border-top: 50px;">
                     <h3>Patient Home</h2>
                 </div>
                 <div id="pagecontent">
