--- a/DrugRegimen/static/login/register.html
+++ b/DrugRegimen/static/login/register.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>Register</title>
+<link rel="shortcut icon" type="image/png" href="/static/admin/img/favicon.png"/>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {
