--- a/DrugRegimen/static/login/login.html
+++ b/DrugRegimen/static/login/login.html
@@ -4,6 +4,7 @@
 
 <head>
   <title>Login</title>
+  <link rel="shortcut icon" type="image/png" href="/static/admin/img/favicon.png"/>
   <link rel="stylesheet" type="text/css" href="/static/admin/css/base.css">
   <link rel="stylesheet" type="text/css" href="/static/admin/css/login.css">
   <link rel="stylesheet" type="text/css" href="/static/admin/css/responsive.css">
